Дополнение файла справки

--- a/Resources/info.html
+++ b/Resources/info.html
@@ -84,8 +84,8 @@
     <h4>Системные требования:</h4>
     <ul>
         <li>Операционная система &ndash; ОС Windows 7 и выше</li>
-        <li>60 Мб оперативной памяти</li>
-        <li>7 Мб свободного места на жестком диске</li>
+        <li>2 Гб оперативной памяти</li>
+        <li>21 Гб свободного места на жестком диске</li>
     </ul>
     <h2 id="h2_2" style="color: #5e9ca0;">Авторизация/регистрация</h2>
     <p>Данная программная система имеет два режима работы: режим обучаемого и администратора. При запуске программной системы появляется окно авторизации, представленное на рисунке. В поля "Логин" и "Пароль" необходимо ввести данные зарегистрированного пользователя и нажать кнопку "Вход".</p>
@@ -163,9 +163,16 @@
     </ul>
     <p>Если все поля заполнены корректно, изменения сохранятся после нажатия кнопки "Сохранить".&nbsp;</p>
     <h3 id="h3_7" style="color: #5e9ca0;">Просмотр статистики</h3>
+    <p>Чтобы проверить статистику в режиме администратора нужно выбрать раздел "Статистика". После выбора раздела откроется окно типа статистики: по уровню, по пользователю и общая.</p>
+    <p align="center"><img src="11.png" /></p>
+    <p>После выбора статистики откроется окно диаграмм со статистическими данными по указанным критериям.</p>
+    <p align="center"><img src="12.png" /></p>
     <h4 id="h3_8">Статистика упражнения</h4>
+    <p>Чтобы получить статистику по выполнению определенного уровня, в окне типа статистики в выпадающем списке выбрать название интересующего упражнения и нажать кнопку "Посмотреть" справа от окна списка.</p>
     <h4 id="h3_9">Статистика пользователя</h4>
+    <p>Чтобы получить статистику по определенному пользователю, в окне типа статистики в выпадающем списке выбрать логин пользователя, статистику которого требуется проверить и нажать кнопку "Посмотреть" справа от окна списка.&nbsp;</p>
     <h4 id="h3_10">Общая статистика</h4>
+    <p>Общую статистику можно получить нажатием кнопки "Общая статистика".</p>
     <h2 id="h2_4" style="color: #5e9ca0;">Режим пользователя</h2>
     <p>В состав режима пользователя входят разделы: "Упражнения", "Статистика", "Настройка", "Тестовое упражнение".</p>
     <p align="center"><img src="8.png" /></p>
@@ -181,8 +188,12 @@
     <p align="center"><img src="9.png" /></p>
     <p>Чтобы успешно выполнить упражнение необходимо набрать текст упражнения, не превысив допустимое количество ошибок.</p>
     <h3 id="h3_16" style="color: #5e9ca0;">Просмотр статистики пользователя</h3>
+    <p>При переходе в раздел "Статистика" пользователю открывается возможность просмотра собственной статистики (по упражнениям или общей).</p>
+    <p align="center"><img src="13.png" /></p>
     <h4 id="h3_17">Статистика по упражнению</h4>
+    <p>Чтобы посмотреть статистику для конкретного упражнения, необходимо нажать на упражнение в списке.</p>
     <h4 id="h3_18">Общая статистика пользователя</h4>
+    <p>При нажатии на кнопку "Общая статистика", откроется статистика по всем упражнениям пройденным текущим пользователем.</p>
     <h3 id="h3_21" style="color: #5e9ca0;">Настройки личного кабинета</h3>
     <p align="center"><img src="10.png" /></p>
     <p>Нажатие на кнопку "Настройки" открывает окно настройки личного кабинета. После внесения изменений необходимо сохранить их, нажав кнопку "Сохранить".</p>
