Исправление ошибок в файле справки

--- a/Resources/info.html
+++ b/Resources/info.html
@@ -127,7 +127,7 @@
     <h2 id="h2_3" style="color: #5e9ca0;">Режим администратора</h2>
     <p>В состав режима администратора входят разделы: "Упражнения", "Статистика", "Создать упражнение", "Настройка сложности".</p>
     <p align="center"><img src="3.png" /></p>
-    <h3 style="color: #5e9ca0;">Создание/редактирование упражнений</h3>
+    <h3 id="h3_1" style="color: #5e9ca0;">Создание/редактирование упражнений</h3>
     <p>Для создания упражнения, администратору необходимо выбрать раздел "Создать упражнение" для открытия формы настройки упражнения.</p>
     <p>Чтобы отредактировать или удалить упражнение, требуется предварительно выбрать существующее упражнение из списка на форме администратора и нажать соответственно кнопку "Изменить" или "Удалить".</p>
     <p>Создание и редактирование упражнения проводятся в форме настройки упражнения, которая имеет следующий вид.</p>
